--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1 style="color:pink;">Welcome to Deon's home on the web!</h1>
 
-<img src="photo.jpg" />
+<img src="me.jpg" />
 
 <h2>About</h2>
 
@@ -26,7 +26,7 @@ Singapore.</p>
 
 <h2>Interests</h2>
 
-<p>I like to play soccer. <a href="https://www.google.com.sg/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=soccer"></p>
+<p>I like to play soccer. <a href="https://www.google.com.sg/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=soccer"></a></p>
 
 <h2>Projects</h2>
 
