--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Singapore.</p>
 
 <h2>Interests</h2>
 
-<p>I like to play soccer. <a href="https://www.google.com.sg/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=soccer"></a></p>
+<p>I like to play <a href="https://www.google.com.sg/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=soccer">soccer</a>.</p>
 
 <h2>Projects</h2>
 
